<resources>
    <string name="app_name">MyFlexibleFragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ini_profile_activity">Ini Profile Activity</string>
    <string name="ini_halaman_category">Ini halaman Category</string>
    <string name="kategory_lifestyle">Kategory Lifestyle</string>
    <string name="category_name">Category Name</string>
    <string name="category_description">Category Description</string>
    <string name="ke_halaman_profile_activity">Ke Halaman Profile Activity</string>
    <string name="tampilkan_sebuah_dialog">Tampilkan sebuah dialog</string>
    <string name="hello_ini_home_fragment">Hello Ini Home Fragment</string>
    <string name="ke_halaman_category">Ke Halaman Category</string>
    <string name="siapa_pelatih_tersukses_machester_united">Siapa pelatih tersukses Machester United?</string>
    <string name="sir_alex_ferguson">Sir Alex Ferguson</string>
    <string name="jose_mourinho">Jose Mourinho</string>
    <string name="louis_van_gaal">Louis Van Gaal</string>
    <string name="david_moyes">David Moyes</string>
    <string name="pilih">Pilih</string>
    <string name="tutup">Tutup</string>
</resources>
