<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin"
    tools:context="com.dicoding.associate.myflexiblefragment.OptionDialogFragment">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/siapa_pelatih_tersukses_machester_united"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>
    <RadioGroup
        android:id="@+id/rg_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton
            android:id="@+id/rb_saf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sir_alex_ferguson"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>
        <RadioButton
            android:id="@+id/rb_mou"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/jose_mourinho"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>
        <RadioButton
            android:id="@+id/rb_lvg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/louis_van_gaal"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>
        <RadioButton
            android:id="@+id/rb_moyes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/david_moyes"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>
    </RadioGroup>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_close"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/tutup"
            android:layout_marginRight="4dp"
            android:layout_marginEnd="4dp"
            style="?android:attr/buttonBarButtonStyle"
            />
        <Button
            android:id="@+id/btn_choose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/pilih"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            style="?android:attr/buttonBarButtonStyle"
            />
    </LinearLayout>
</LinearLayout>
